Content gap bugfix (#1235)
* fix: content gap table returned no data if url or domain invalid

* fix: simplification of api

* fix: code formatting

* fix: only urls sending, no tabs

* fix: empty urls handling

* fix: performance problem with SQL

* fix: performance problem with SQL - if more rows as supported, rank is -1

* fix: query key from panels, closing external panels after compare button,

* feat: added remove url field button

* fix: setting compare domains to false on compare urls button

* fix: convert numbers from string to int

* fix: small naming changes - simplification

---------

--- a/admin/src/assets/styles/elements/_IconButton.scss
+++ b/admin/src/assets/styles/elements/_IconButton.scss
@@ -27,6 +27,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		flex: 1 0 auto;
 		border-radius: 50%;
 		padding: 0.1em;
 
